--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@ search_exclude: true
 image: images/logo.png
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+![]({{site.baseurl}}/images/banner.png "A simple NN analysing galaxy images")
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
+This blog contains notes and notebooks of a professional Astronomer diving deep into the study
+of deep learning. What I found during my quest, and what I report here, is meant to be purely
+anecdotical and not necessarily following a logical and sound educational path. The
+hope with which I build this blog is that it will eventually be useful to me to look back at
+and that other people with a similar background may find some use out of these notes and
+notebooks.
 
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
-
-You can edit the `index.html` file to change this content.
+This site is built using [fastpages](https://github.com/fastai/fastpages).
+The diagram of the neural network in the banner was made using [NN-SVG](http://alexlenail.me/NN-SVG/index.html),
+the input image shows isophotal contours of the galaxy NGC 4342 rendered from
+[Hubble observations](https://archive.stsci.edu/missions-and-data/hst).
 
 # Posts
