adding short bio in index.html

--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@ image: images/logo.png
 
 ![]({{site.baseurl}}/images/banner.png "A simple NN analysing galaxy images")
 
+# An Astronomer's perspective on Deep Learning
+
 This blog contains notes and notebooks of a professional Astronomer diving deep into the study
 of deep learning. What I found during my quest, and what I report here, is meant to be purely
 anecdotical and not necessarily following a logical and sound educational path. The
 hope with which I build this blog is that it will eventually be useful to me to look back at
 and that other people with a similar background may find some use out of these notes and
 notebooks.
+
+My name is Lorenzo Posti and I'm currently a postdoctoral researcher at the
+[Strasbourg Observatory](https://astro.unistra.fr/) (France) specialized in models of galaxy
+dynamics, which I use to study the origin of galaxies and the nature of dark matter.
+Find my personal research page [here](http://astro.u-strasbg.fr/~posti/)
+
 
 This site is built using [fastpages](https://github.com/fastai/fastpages).
 The diagram of the neural network in the banner was made using [NN-SVG](http://alexlenail.me/NN-SVG/index.html),
