deploy: 36f41c480adae84737af1aaa76f46a091636427a

--- a/index.html
+++ b/index.html
@@ -91,17 +91,18 @@ window.onload = wrap_img;
 
 <h1 id="an-astronomers-perspective-on-deep-learning">An Astronomer’s perspective on Deep Learning</h1>
 
-<p>This blog contains notes and notebooks of a professional Astronomer diving deep into the study
+<p>This blog contains notes and notebooks of a researcher in Astronomy diving deep into the study
 of deep learning. What I found during my quest, and what I report here, is meant to be purely
-anecdotical and not necessarily following a logical and sound educational path. The
-hope with which I build this blog is that it will eventually be useful to me to look back at
-and that other people with a similar background may find some use out of these notes and
-notebooks.</p>
+anecdotical and it is not necessarily following a logical and sound educational path. The
+hope, with which I build this blog, is that it will eventually become a useful reference for
+me to look back at and that also other people, with a similar background to mine, may find some
+use out of these notes and notebooks.</p>
 
 <p>My name is Lorenzo Posti and I’m currently a postdoctoral researcher at the
 <a href="https://astro.unistra.fr/">Strasbourg Observatory</a> (France) specialized in models of galaxy
 dynamics, which I use to study the origin of galaxies and the nature of dark matter.
-Find my personal research page <a href="http://astro.u-strasbg.fr/~posti/">here</a></p>
+Find my list of poublications on
+<a href="https://ui.adsabs.harvard.edu/user/libraries/fCiUp3W_T7qXYNboezCKAg">ADS</a></p>
 
 <p>This site is built using <a href="https://github.com/fastai/fastpages">fastpages</a>.
 The diagram of the neural network in the banner was made using <a href="http://alexlenail.me/NN-SVG/index.html">NN-SVG</a>,
