deploy: 99a902f3740eb357fe33e306bcfa81be9205ca91

--- a/about/index.html
+++ b/about/index.html
@@ -136,7 +136,14 @@ stripped-down version can be found <a href="https://web.archive.org/web/20210624
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/lposti" target="_blank" title="lposti"><svg class="svg-icon grey"><use xlink:href="/MLPages/assets/minima-social-icons.svg#github"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li>
+  <a rel="me" href="https://github.com/lposti" target="_blank" title="github">
+    <svg class="svg-icon grey">
+      <use xlink:href="/MLPages/assets/minima-social-icons.svg#github"></use>
+    </svg>
+  </a>
+</li>
+</ul>
 </div>
 
   </div>
