--- a/index.html
+++ b/index.html
@@ -183,7 +183,14 @@ the input image shows isophotal contours of the galaxy NGC 4342 rendered from
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/lposti" target="_blank" title="lposti"><svg class="svg-icon grey"><use xlink:href="/MLPages/assets/minima-social-icons.svg#github"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li>
+  <a rel="me" href="https://github.com/lposti" target="_blank" title="github">
+    <svg class="svg-icon grey">
+      <use xlink:href="/MLPages/assets/minima-social-icons.svg#github"></use>
+    </svg>
+  </a>
+</li>
+</ul>
 </div>
 
   </div>
