--- a/index.html
+++ b/index.html
@@ -188,28 +188,7 @@ the input image shows isophotal contours of the galaxy NGC 4342 rendered from
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li>
-  <a rel="me" href="https://github.com/lposti" target="_blank" title="github">
-    <svg class="svg-icon grey">
-      <use xlink:href="/MLPages/assets/minima-social-icons.svg#github"></use>
-    </svg>
-  </a>
-</li>
-<li>
-  <a rel="me" href="https://ui.adsabs.harvard.edu/user/libraries/fCiUp3W_T7qXYNboezCKAg" target="_blank" title="ads">
-    <svg class="svg-icon grey">
-      <use xlink:href="/MLPages/assets/minima-social-icons.svg#ads"></use>
-    </svg>
-  </a>
-</li>
-<li>
-  <a rel="me" href="https://scholar.google.com/citations?user=fDDcGdwAAAAJ&hl=en" target="_blank" title="google_scholar">
-    <svg class="svg-icon grey">
-      <use xlink:href="/MLPages/assets/minima-social-icons.svg#google_scholar"></use>
-    </svg>
-  </a>
-</li>
-</ul>
+    <div class="social-links"><ul class="social-media-list"></ul>
 </div>
 
   </div>
