deploy: 2cec2a32abf4f34b967a499678022b96c9bb0d72

--- a/about/index.html
+++ b/about/index.html
@@ -127,7 +127,7 @@ stripped-down version can be found <a href="https://web.archive.org/web/20210624
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/MLPages/feed.xml">
+          <a href="https://lposti.github.io/MLPages/feed.xml">
             <svg class="svg-icon orange">
               <use xlink:href="/MLPages/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
